@@ -5,6 +5,7 @@
 		'advanced_notifications:cli:error:type' => "The provided type isn't supported",
 		
 		'advanced_notifications:settings:replace_site_notifications' => "Do you wish to replace system notifications, that normally end up in the messages plugin, with a personalized activity page (based on notifications settings)?",
+		'advanced_notifications:settings:no_mail_content' => "Do you want to replace the content notification bodies with a just a link to the content?",
 		
 		'advanced_notifications:activity:groups' => "My Groups",
 		'advanced_notifications:activity:groups:title' => "Activity in my groups",
@@ -14,6 +15,9 @@
 		'advanced_notifications:activity:notifications:info' => "Activity based on my notification settings",
 		
 		'advanced_notifications:discussion:reply:subject' => "New group discussion reply",
+		
+		'advanced_notifications:notification:email:body' => "To view the content click here
+%s",
 	);
 	
 	add_translation("en", $english);
